commit working to pizza place

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             android:name=".OrderPageActivity" />
         <activity
             android:name=".CheckoutActivity" />
+        <activity android:name=".PizzaActivity"/>
+        <activity android:name=".BurgerActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
